[gd_scene load_steps=5 format=3 uid="uid://dhp466py5gvg6"]

[ext_resource type="StyleBox" uid="uid://skjp7qat3stj" path="res://Common/CustomResources/Buttons/MainMenuButton_Normal.tres" id="1_d8yny"]
[ext_resource type="Script" uid="uid://cqa43vwhbq6yy" path="res://Stages/MainMenu/main_menu.gd" id="1_v2tt7"]
[ext_resource type="Texture2D" uid="uid://di42c04urry3p" path="res://Assets/Backgrounds/main_menu_bg.png" id="2_3pps2"]
[ext_resource type="StyleBox" uid="uid://bo1xujyi6uiin" path="res://Common/CustomResources/Buttons/MainMenuButton_Hover.tres" id="2_w5ok3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2tt7")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.75500655, 0.75503004, 0.7438053, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3pps2")
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 44)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_d8yny")
theme_override_styles/pressed = ExtResource("2_w5ok3")
theme_override_styles/hover = ExtResource("2_w5ok3")
theme_override_styles/hover_pressed = ExtResource("2_w5ok3")
theme_override_styles/focus = ExtResource("2_w5ok3")
text = "HOST A GAME"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 44)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_d8yny")
theme_override_styles/pressed = ExtResource("2_w5ok3")
theme_override_styles/hover = ExtResource("2_w5ok3")
theme_override_styles/hover_pressed = ExtResource("2_w5ok3")
theme_override_styles/focus = ExtResource("2_w5ok3")
text = "JOIN"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 44)
layout_mode = 2
theme_override_styles/normal = ExtResource("1_d8yny")
theme_override_styles/pressed = ExtResource("2_w5ok3")
theme_override_styles/hover = ExtResource("2_w5ok3")
theme_override_styles/hover_pressed = ExtResource("2_w5ok3")
theme_override_styles/focus = ExtResource("2_w5ok3")
text = "EXIT"
